<resources>
    <string name="app_name">Animal World</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="button_login_with_fingerprint">Use fingerprint</string>
    <string name="register">Registration</string>
    <string name="forget">Recovery</string>
    <string name="preference_file_key">file_key</string>
    <string name="confirmedPassword">Confirmed Password</string>
    <string name="firstname">Firstname</string>
...
